@@ -1,5 +1,8 @@
 New entries should be added at the top
 
+2004-11-17 backend_gtkcairo.py: change so all print_figure() calls render using
+           Cairo and get saved using backend_gtk.print_figure() - SC
+
 2004-11-13 backend_cairo.py: Discovered the magic number (96) required for
 	   Cairo PS plots to come out the right size. Restored Cairo PS output
 	   and added support for landscape mode	- SC
